--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-slideshow-image": "^4.2.1"
+    "react-slideshow-image": "^4.2.1",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
