--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@vercel/analytics": "^1.0.2",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
